Added more validators

--- a/index.html
+++ b/index.html
@@ -55,6 +55,37 @@
     <main>
         <div class="content">
             <b>Node Name(s):</b>
+            <br>CRYPTENODE - 01
+            <br>CRYPTENODE - 02
+            <br><b>Node Address(es):</b>
+            <br>5ECM7nUB5VCuTBGa9V5xeCECr4CDr7d3M4gGK4DLfzCvuBBD
+            <br>5EeeRBQSzx5mmtT5EjPmfEj21GbNRAGy71Q1Q3UTYSuk5Gy4
+            <br><b>English Description:</b>
+            <br>Passionate about the Ternoa universe since the PS2 and validator since the first blocks of the Testnet,
+            I now offer 2 validators on the mainnet (a third one is under consideration and will be the last). My
+            validators are monitored (24/24h, 7/7D), secured by me and updated regularly. I propose a Gitbook
+            documentation to help the community to get familiar with the polkadot universe, especially by helping them
+            to stake.
+            I also set up a monthly drop of NFT's to reward my active nominators (see my social networks).
+            <br><b>Descriptif Français:</b>
+            <br>Passionné par l'univers de Ternoa depuis le PS2 et validateur depuis les premiers blocks du Testnet, je
+            propose à présent 2 validateurs sur le mainnet (un troisième est en réflexion et sera le dernier). Mes
+            validateurs sont monitorés (24/24h, 7/7J), sécurisés pars mes soins et mis à jour régulièrement. Je propose
+            une documentation Gitbook pour aider la communauté à se familiariser avec l'univers de polkadot notamment en
+            les aidant à staker.
+            J'ai également mis en place un drop mensuel de NFT's pour récompenser mes nominateurs actifs (voir mes
+            réseaux sociaux).
+            <br><b>Useful Links:</b>
+            <br><b>Discord:</b> Louis_Crypté#8524
+            <br><b>Telegram:</b> <a href="https://t.me/louis_crypte">https://t.me/louis_crypte</a>
+            <br><b>Matrix:</b> @louis_crypte:matrix.org
+            <br><b>Twitter:</b> <a href="https://twitter.com/_Crypte_">https://twitter.com/_Crypte_</a>
+            <br><b>Gitbook:</b> <a href="https://crypte.gitbook.io">https://crypte.gitbook.io</a>
+            <br>
+        </div>
+
+        <div class="content">
+            <b>Node Name(s):</b>
             <br>Crystal-Network
             <br><b>Node Address(es):</b>
             <br>5H5zYAUc37j9MzKhjN5drx2UMDATTcyTQ39XEAS6b6Jd7cSo
@@ -73,9 +104,35 @@
             Nous ne voulons pas que les gens se contentent de nommer notre nœud communautaire, nous voulons qu'ils en
             apprennent davantage sur son fonctionnement et qu'ils aient la possibilité de proposer des améliorations
             <br><b>Useful Links:</b>
-            <br><b>Discord:</b> <a href="https://discord.gg/9hchtTsEaW">Link</a>
+            <br><b>Discord:</b> <a href="https://discord.gg/9hchtTsEaW">https://discord.gg/9hchtTsEaW</a>
             <br><b>Mail:</b> Hello@crystal-network.ch
             <br><b>Twitter:</b> @Crystal_Netw0rk
+            <br>
+        </div>
+
+        <div class="content">
+            <b>Node Name(s):</b>
+            <br>HERACLES
+            <br><b>Node Address(es):</b>
+            <br>5FWuM8Q3DRBAzu2PeqfmXqwdnegk8yiiMLXtZLB3dqJjomG8
+            <br><b>English Description:</b>
+            <br>HERACLES is a trusted Proof-of-Stake infrastructure provider and validator to comfortably stake your
+            CAPS and earn daily rewards. We are two french engineers: one Ternoa core team member and one experimented
+            devops. Our Ternoa node rely on a highly secure and reliable infrastructure. The whole system is monitored
+            24/7 with an alerting system always up and running.
+            We provide some tools to facilitate the nominators' experience, such as a rewards calculator.
+            <br><b>Descriptif Français:</b>
+            <br>HERACLES fournit une interface simple pour stacker confortablement ses CAPS et gagner des récompenses
+            quotidiennes. Nous sommes une équipe de 2 ingénieurs français: un core team member de Ternoa et un ingénieur
+            devops expérimenté. Notre nœud repose sur une infrastructure hautement sécurisée et fiable. L'ensemble du
+            système est surveillé 24/7 avec un système d'alerte toujours opérationnel.
+            On propose aussi des outils pour faciliter l'expérience des nominateurs comme par exemple un calculateur de
+            rewards.
+            <br><b>Website:</b> <a href="https://heracles.works/">https://heracles.works/</a>
+            <br><b>Twitter:</b> <a href="https://twitter.com/heracles_works">@heracles_works</a>
+            <br><b>Mail:</b> contact@heracles.works
+            <br><b>Rewards Calculator dApp:</b> <a
+                href="https://calculator.heracles.works/">https://calculator.heracles.works</a>
             <br>
         </div>
 
@@ -110,6 +167,33 @@
             <br><b>Useful Links:</b>
             <br><b>Mail:</b> oriusinternational@pm.me
             <br><b>Twitter:</b> @OriusLLC
+            <br>
+        </div>
+
+        <div class="content">
+            <b>Node Name(s):</b>
+            <br>Tulleb23
+            <br><b>Node Address(es):</b>
+            <br>5FXAQYymZui6nGNxCer6ShQ3jMfEdDS46aowonEYfFngJ49a
+            <br><b>English Description:</b>
+            <br>Hi 👋 My name is Guillaume Bellut and I am running Tulleb23, a personal Ternoa Masternode you can join
+            to aim for a better decentralisation.
+            Unlike most of the other company proposing several nodes sometimes under the same roof, I provide you a
+            unique node which maintains the stability of Ternoa without having any dependency to other cloud computing
+            system. Tulleb23 is a fully dedicated computer which is physically accessible at any moment; no virtual
+            machine hosted by a third-party company around here 👍
+            <br><b>Descriptif Français:</b>
+            <br>Bonjour 👋 Je suis Guillaume Bellut, propriétaire de Tulleb23, un masternode Ternoa personnel que vous
+            pouvez rejoindre pour aider à plus de décentralisation.
+            Contrairement à la plupart des autres entreprises proposant plusieurs nodes la plupart du temps sous un même
+            toit, je ne propose qu'une unique machine afin de pousser à plus de stabilité sur la blockchain Ternoa sans
+            avoir aucune dépendance envers d'autre entreprise de cloud computing. Tulleb23 est physiquement accessible ;
+            pas de machine virtuelle 👍
+            <br><b>Useful Links:</b>
+            <br><b>E-mail:</b> tulleb@hotmail.com
+            <br><b>GitHub:</b> <a href="https://github.com/Tulleb">Tulleb</a>
+            <br><b>Stask Overflow:</b> <a href="https://stackoverflow.com/users/2854405/tulleb">Tulleb</a>
+            <br><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/tulleb/">Guillaume Bellut</a>
             <br>
         </div>
     </main>
